=================
Changes for Crate
=================

Unreleased
==========

 - Restricted allowed characters in column names

2014/12/17 0.46.0
=================

 - Add support for user-defined schemas.

 - Changed output of column names in error messages to subscript notation,
   so the correct notation to address columns in sql is reflected

 - implemented table ``information_schema.schemata`` with column ``schema_name``
   listing all available schemas

 - Array types are now fully supported in dynamic schemas. Note that
   Crate performs an internal migration, therefore downgrading to an
   older version is not supported

 - Updated Elasticsearch to 1.4.1

 - Improve performance of regex functions by actually
   pre-compiling their used patterns (if given as literal)

 - Add sql query breaker which will terminate a query execution if too
   much memory will be consumed.

 - Use flake ids for interal id generation

 - Added Support for Column Policies, which can be used to define if a
   table enforces its defined schema or if it's allowed to store
   additional columns which are not defined in the schema.

 - Throw an error while using unknown root columns on SELECT

2014/12/16 0.45.6
=================

 - Fix: Nested Columns of ignored objects where exported
   as `null` values when using COPY TO

 - Fix: Inserting arrays with a null value at first position
   failed

 - Fix: Using CLUSTERED BY Column in PARTITIONED BY clause threw
   misleading exception

 - Fix: Added comments to the logging.yml config file and reduced the
   amount of log entries by changing the loglevel of some log messages

 - Fix: correctly plan group by queries using HAVING clause

 - Fix: Improve Error messages on COPY TO and COPY FROM

 - Fix: The clustered-by columns could be updated if they were nested.

 - Fix: Fixed an edge case where group by queries on system tables or
   grouping on primary key or routing column and using limit or