@@ -5,6 +5,8 @@ Changes for Crate
 Unreleased
 ==========
 
+ - Added support for the datetime function ``extract (field from source``
+
  - Restricted allowed characters in column names
 
 2014/12/17 0.46.0
